# poker-tracker

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.e2e.yml  docker-compose.perf.yml  docker-compose.yml  performance-test.js  run-dive-analysis.sh  run-e2e-tests.sh  run-perf-tests.sh
.github/: FUNDING.yml
.github/workflows/: backend-ci.yml  docker-image-analysis.yml  frontend-ci.yml  playwright.yml  rust-ci.yml  rust-security-audit.yml
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml  poker-tracker.toml.example
backend/.github/workflows/: ci.yml
backend/migrations/00000000000001_create_users/: up.sql
backend/migrations/00000000000002_create_poker_sessions/: up.sql
backend/proptest-regressions/middleware/: auth.txt
backend/src/: app.rs  lib.rs  main.rs  schema.rs
backend/src/handlers/: auth.rs  mod.rs  poker_session.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  poker_session.rs  user.rs
backend/src/utils/: config.rs  db.rs  jwt.rs  mod.rs
backend/tests/: auth_tests.rs  http_auth_tests.rs  http_session_tests.rs  session_tests.rs
backend/tests/common/: mod.rs
backend/tests/http_common/: mod.rs
frontend/: Dockerfile  Dockerfile-playwright  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: dashboard.spec.ts  metadata.spec.ts  registration.spec.ts
frontend/src/: App.svelte
frontend/src/components/: BankrollChart.svelte  CookieConsent.svelte  Footer.svelte  Navigation.svelte  SessionForm.svelte  SessionTable.svelte
frontend/src/lib/: api.ts
frontend/src/pages/: Charts.svelte  Dashboard.svelte  Help.svelte  Landing.svelte  Login.svelte  Privacy.svelte  Register.svelte  Settings.svelte
(+12 files in other folders)
