[package]
name = "poker_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
diesel = { version = "2.1", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
    "uuid",
] }
diesel_migrations = "2.1"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = { version = "10.2", default-features = false, features = ["aws_lc_rs"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
